--- a/public/index.html
+++ b/public/index.html
@@ -42,5 +42,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div id="bg-image-attribution-link"><a href="https://www.freepik.com/vectors/background" title="Background vector created by s.salvador - freepik.com">Background vector created by s.salvador - freepik.com</a></div>
   </body>
 </html>
