Convert site to dark layout, reduce border-radius of elements by 25px, change font to Rubik, tweak various element/text colors, add background opacity to information cards throughout site

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
     <title>ChrisSlaight.com</title>
   </head>
   <body>
@@ -42,6 +42,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <div id="bg-image-attribution-link"><a href="https://www.freepik.com/vectors/background" title="Background vector created by s.salvador - freepik.com">Background vector created by s.salvador - freepik.com</a></div>
+    <div id="bg-image-attribution-link"><a href="https://www.freepik.com/vectors/background" title="Background image created by rawpixel.com - www.freepik.com">Background image created by rawpixel.com - www.freepik.com</a></div>
   </body>
 </html>
